[refactor] 코드레빗 권고사항에 해당하는 사항들 반영(기존에 비해 예외처리 강화, 혼동 방지를 위해 yml의 속성명 변경)